<resources>
    <string name="app_name">Health_In_Time</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_nickname">Enter Valid Username</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_valid_nick_password">Wrong Username or Password</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error_email_nickname_exists">Email Or Username Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_nickname">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="title_activity_base">BaseActivity</string>

</resources>
